add party leaderboard