@@ -12,9 +12,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 /**
  * Handles the construction and rendering of the Leaderboard GUI.
@@ -61,12 +59,6 @@ public class TopGUI {
 
     /**
      * Opens the Leaderboard GUI for the specified dungeon map.
-     * Fetches data async and then syncs back to the main thread to open the inventory.
-     *
-     * @param p         The player opening the GUI.
-     * @param dungeonId The ID of the dungeon to display.
-     * @param category  The specific leaderboard category (Time, Kills, Clears).
-     * @param page      The current page number.
      */
     public void openTopGUI(Player p, String dungeonId, TopManager.TopCategory category, int page) {
         String loadingMsg = plugin.getMessagesFile().getString("top.loading", "&eLoading leaderboard data...");
@@ -74,6 +66,7 @@ public class TopGUI {
 
         int limit = plugin.getConfigFile().getInt("leaderboard.fetch-limit", 50);
         int guiSize = plugin.getConfigFile().getInt("leaderboard.gui-size", 54);
+        if (guiSize < 18) guiSize = 54; // Ensure enough room for nav buttons
 
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             List<TopManager.TopEntry> records = plugin.getTopManager().getTop(dungeonId, category, limit);
@@ -83,7 +76,7 @@ public class TopGUI {
                 Inventory inv = Bukkit.createInventory(new TopHolder(dungeonId, category, page), guiSize, ColorUtils.parse(titleRaw.replace("<map>", dungeonId)));
 
                 int maxPage = Math.max(0, (records.size() - 1) / 36);
-                int currentPage = Math.clamp(page, 0, maxPage);
+                int currentPage = Math.max(0, Math.min(maxPage, page)); // Java 17 safe clamp
 
                 for (int i = 0; i < 36; i++) {
                     int index = i + (currentPage * 36);
@@ -106,24 +99,41 @@ public class TopGUI {
 
                     String nameRaw = plugin.getMessagesFile().getString("top.item_format", "&e#<rank> &f<player>")
                             .replace("<rank>", String.valueOf(rank))
-                            .replace("<player>", entry.playerName());
+                            .replace("<player>", category == TopManager.TopCategory.PARTY_FASTEST_TIME ? "Party Run" : entry.playerName());
 
                     List<String> loreRaw = new ArrayList<>();
                     String dateStr = dateFormat.format(new Date(entry.recordedAt()));
 
                     switch (category) {
                         case FASTEST_TIME -> {
-                            for (String s : plugin.getMessagesFile().getStringList("top.time_lore")) {
+                            List<String> timeLore = plugin.getMessagesFile().getStringList("top.time_lore");
+                            if (timeLore == null || timeLore.isEmpty())
+                                timeLore = Arrays.asList("&7Time: &a<value>", "&7Date: &f<date>");
+                            for (String s : timeLore) {
                                 loreRaw.add(s.replace("<value>", formatTime(entry.value())).replace("<date>", dateStr));
                             }
                         }
+                        case PARTY_FASTEST_TIME -> {
+                            List<String> partyLore = plugin.getMessagesFile().getStringList("top.party_time_lore");
+                            if (partyLore == null || partyLore.isEmpty())
+                                partyLore = Arrays.asList("&7Time: &a<value>", "&7Date: &f<date>", "&7Members: &f<members>");
+                            for (String s : partyLore) {
+                                loreRaw.add(s.replace("<value>", formatTime(entry.value())).replace("<date>", dateStr).replace("<members>", entry.playerName()));
+                            }
+                        }
                         case MOST_KILLS -> {
-                            for (String s : plugin.getMessagesFile().getStringList("top.kills_lore")) {
+                            List<String> killLore = plugin.getMessagesFile().getStringList("top.kills_lore");
+                            if (killLore == null || killLore.isEmpty())
+                                killLore = Arrays.asList("&7Total Kills: &c<value>", "&7Date: &f<date>");
+                            for (String s : killLore) {
                                 loreRaw.add(s.replace("<value>", String.valueOf(entry.value())).replace("<date>", dateStr));
                             }
                         }
                         case MOST_CLEARS -> {
-                            for (String s : plugin.getMessagesFile().getStringList("top.clears_lore")) {
+                            List<String> clearLore = plugin.getMessagesFile().getStringList("top.clears_lore");
+                            if (clearLore == null || clearLore.isEmpty())
+                                clearLore = Arrays.asList("&7Total Clears: &a<value>", "&7Date: &f<date>");
+                            for (String s : clearLore) {
                                 loreRaw.add(s.replace("<value>", String.valueOf(entry.value())).replace("<date>", dateStr));
                             }
                         }
@@ -133,14 +143,23 @@ public class TopGUI {
                 }
 
                 Material timeMat = Material.matchMaterial(plugin.getConfigFile().getString("leaderboard.items.category_time", "CLOCK"));
+                Material partyTimeMat = Material.matchMaterial(plugin.getConfigFile().getString("leaderboard.items.category_party_time", "GOLDEN_APPLE"));
                 Material killsMat = Material.matchMaterial(plugin.getConfigFile().getString("leaderboard.items.category_kills", "DIAMOND_SWORD"));
                 Material clearsMat = Material.matchMaterial(plugin.getConfigFile().getString("leaderboard.items.category_clears", "NETHER_STAR"));
 
-                List<String> switchLore = plugin.getMessagesFile().getStringList("top.click_to_switch");
+                if (timeMat == null) timeMat = Material.CLOCK;
+                if (partyTimeMat == null) partyTimeMat = Material.GOLDEN_APPLE;
+                if (killsMat == null) killsMat = Material.DIAMOND_SWORD;
+                if (clearsMat == null) clearsMat = Material.NETHER_STAR;
 
-                inv.setItem(guiSize - 7, makeItem(timeMat, plugin.getMessagesFile().getString("top.category_time"), switchLore));
-                inv.setItem(guiSize - 5, makeItem(killsMat, plugin.getMessagesFile().getString("top.category_kills"), switchLore));
-                inv.setItem(guiSize - 3, makeItem(clearsMat, plugin.getMessagesFile().getString("top.category_clears"), switchLore));
+                List<String> switchLore = plugin.getMessagesFile().getStringList("top.click_to_switch");
+                if (switchLore == null || switchLore.isEmpty())
+                    switchLore = Collections.singletonList("&eLeft Click to view this category!");
+
+                inv.setItem(guiSize - 8, makeItem(timeMat, plugin.getMessagesFile().getString("top.category_time", "&b&lSolo Fastest Clears"), switchLore));
+                inv.setItem(guiSize - 6, makeItem(partyTimeMat, plugin.getMessagesFile().getString("top.category_party_time", "&d&lParty Fastest Clears"), switchLore));
+                inv.setItem(guiSize - 4, makeItem(killsMat, plugin.getMessagesFile().getString("top.category_kills", "&c&lMost Kills"), switchLore));
+                inv.setItem(guiSize - 2, makeItem(clearsMat, plugin.getMessagesFile().getString("top.category_clears", "&a&lMost Clears"), switchLore));
 
                 String navItemStr = plugin.getConfigFile().getString("editor.nav-item", "ARROW");
                 Material navMat = Material.matchMaterial(navItemStr);
